# request-sender

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
src/request_sender/: __init__.py  sender.py  status_codes.py
tests/: test_classargs.py
